SubBt/force-app/main/default/objects/Custom_Calendar__c/Custom_Calendar__c.object-meta.xml
<CustomObject>
    <label>Custom Calendar</label>
    <nameField>
        <label>Custom Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>