SubBt/force-app/main/default/objects/Custom_Calendar__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>