SubBt/force-app/main/default/objects/Custom_Calendar__c/fields/EndField__c.field-meta.xml
<CustomField>
    <fullName>EndField__c</fullName>
    <label>EndField</label>
    <length>50</length>
    <type>Text</type>
</CustomField>