SubBt/force-app/main/default/objects/Custom_Calendar__c/fields/ListViewFilter__c.field-meta.xml
<CustomField>
    <fullName>ListViewFilter__c</fullName>
    <label>ListViewFilter</label>
    <length>50</length>
    <type>Text</type>
</CustomField>