SubBt/force-app/main/default/objects/Custom_Calendar__c/fields/SobjectType__c.field-meta.xml
<CustomField>
    <fullName>SobjectType__c</fullName>
    <label>SobjectType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>