SubBt/force-app/main/default/objects/Custom_Calendar__c/fields/StartField__c.field-meta.xml
<CustomField>
    <fullName>StartField__c</fullName>
    <label>StartField</label>
    <length>50</length>
    <type>Text</type>
</CustomField>